Implement assigned editor campaign selection
